recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:11: error: Unit does not take parameters
  square()
        ^