recursion.logo.square.FourSquare.scala.code
def square {
  forward(100)
  left(90)
  forward(100)
  left(90)
  forward(100)
  left(90)
  forward(100)
}
override def run() {
  square()
  right(90)
  
  
}
